<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/default_margin">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/upload_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_plant_page_upload_button"
            android:background="@color/Orange"
            style="@style/TitleTextStyle"
            android:textColor="@color/white"
            android:padding="@dimen/default_margin"/>

        <ImageView
            android:id="@+id/preview_image"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/pizza"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
    
    <EditText
        android:id="@+id/name_input"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:hint="@string/add_plant_page_name_input"
        android:paddingLeft="@dimen/item_margin"
        style="@style/spinnerStyle"/>

    <EditText
        android:id="@+id/description_input"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:hint="@string/add_plant_page_description_button"
        android:paddingLeft="@dimen/item_margin"
        style="@style/spinnerStyle"/>

    <Spinner
        android:id="@+id/type_spinner"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:entries="@array/add_plant_page_type_spinner_input"
        android:paddingLeft="@dimen/item_margin"
        android:background="@color/LightOrange"
        android:popupBackground="@color/LightOrange"/>


    <Button
        android:id="@+id/confirm_button"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="@string/add_plant_page_confirm_button"
        android:textColor="@color/white"
        android:textSize="24dp"
        android:layout_marginTop="@dimen/margin4"
        style="@style/TitleTextStyle"
        android:background="@color/DarkGray"/>
</LinearLayout>