<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="450dp"
    android:background="@color/LightLightOrange"
    android:layout_margin="10dp">

    <View
        android:id="@+id/view"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <androidx.cardview.widget.CardView
        android:id="@+id/sandwiches_card"
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:cardCornerRadius="40dp"
        android:elevation="10dp"
        app:layout_constraintBottom_toTopOf="@+id/view2"
        app:layout_constraintEnd_toStartOf="@+id/view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/sandwiches_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/sandwich" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/sandwiches_txtvw"
        style="@style/MenuMeals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sandwich_meal"
        android:layout_marginTop="@dimen/item_margin"
        app:layout_constraintEnd_toEndOf="@+id/sandwiches_card"
        app:layout_constraintStart_toStartOf="@+id/sandwiches_card"
        app:layout_constraintTop_toBottomOf="@+id/sandwiches_card" />

    <androidx.cardview.widget.CardView
        android:id="@+id/salads_card"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:elevation="10dp"
        app:cardCornerRadius="40dp"
        app:layout_constraintBottom_toBottomOf="@+id/sandwiches_card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/sandwiches_card">


        <ImageView
            android:id="@+id/salads_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/salad" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/salads_txtvw"
        style="@style/MenuMeals"
        android:layout_marginTop="@dimen/item_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/salad_meal"
        app:layout_constraintEnd_toEndOf="@+id/salads_card"
        app:layout_constraintStart_toStartOf="@+id/salads_card"
        app:layout_constraintTop_toBottomOf="@+id/salads_card" />

    <androidx.cardview.widget.CardView
        android:id="@+id/dishes_card"
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:cardCornerRadius="40dp"
        android:elevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2">


        <ImageView
            android:id="@+id/dishes_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/plats" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/dishes_txtvw"
        style="@style/MenuMeals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dishes_meal"
        android:layout_marginTop="@dimen/item_margin"
        app:layout_constraintEnd_toEndOf="@+id/dishes_card"
        app:layout_constraintStart_toStartOf="@+id/dishes_card"
        app:layout_constraintTop_toBottomOf="@+id/dishes_card" />

    <androidx.cardview.widget.CardView
        android:id="@+id/pizza_card"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:elevation="10dp"
        app:cardCornerRadius="40dp"
        app:layout_constraintBottom_toBottomOf="@+id/dishes_card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/dishes_card">


        <ImageView
            android:id="@+id/pizza_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/pizza" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/pizza_txtvw"
        style="@style/MenuMeals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pizza_meal"
        app:layout_constraintEnd_toEndOf="@+id/pizza_card"
        app:layout_constraintStart_toStartOf="@+id/pizza_card"
        app:layout_constraintTop_toBottomOf="@+id/pizza_card"
        android:layout_marginTop="@dimen/item_margin"/>

</androidx.constraintlayout.widget.ConstraintLayout>